# bee_auth_services

./: .gitignore  AGENTS.md  Dockerfile  INSTRUCTIUNI.md  README.md  database.py  main.py  pyproject.toml  run_gunicorn.py  settings.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1c572a13dc24_create_auth_tables.py  35b6c0f1d431_update_login_attempts.py  5ba4be585eee_add_login_attempts_email_index.py  c8a56dc08d9d_add_unique_twofa_token.py
docs/: bee_auth_service_detailed_documentation.md  documentatie_detaliata_bee_auth_service.md  ghid_bee_auth_service.md  ghid_frontend_integrare.md  ghid_rulare_teste.md
events/: rabbitmq.py
models/: __init__.py  email_verification.py  login_attempts.py  password_reset_token.py  twofa_tokens.py  user.py
routers/: auth.py
schemas/: event.py  user.py
services/: __init__.py  auth.py  jwt.py  social.py
tests/: conftest.py  test_alerts.py  test_auth_login.py  test_auth_register.py  test_cors.py  test_counters.py  test_events.py  test_logging.py  test_metrics.py  test_models.py  test_openapi_metadata.py  test_password_reset.py  test_rate_limit.py  test_rate_limit_integration.py  test_refresh_logout.py  test_schemas.py  test_security_headers.py  test_setup_2fa.py  test_social_login.py  test_twofa_flow.py  test_utils_security.py  test_validate.py  test_verify_2fa.py  test_verify_email.py
utils/: __init__.py  alerts.py  errors.py  logging.py  metrics.py  rate_limit.py  security.py  settings.py  token_store.py
