[project]
name = "bee-auth-services"
version = "0.1.0"
description = ""
authors = [
    {name = "draghiciioan",email = "75200645+draghiciioan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "SQLAlchemy (>=2.0,<3.0)",
    "alembic (>=1.13,<2.0)",
    "psycopg2-binary (>=2.9,<3.0)",
    "passlib[bcrypt]",
    "python-jose",
    "aio-pika",
    "fastapi-limiter",
    "redis",
    "authlib"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pydantic = {extras = ["email"], version = "^2.11.7"}
fakeredis = "^2.30.1"

